Do not add extra compile options for Java 7
+review REVIEW-6394