@@ -35,7 +35,4 @@ tasks.withType(GroovyCompile) {
     options.encoding = 'utf-8'
     options.compilerArgs = ['-Xlint:-options', '-Xlint:-path']
     groovyOptions.encoding = 'utf-8'
-    if (!JavaVersion.current().java8Compatible) {
-        groovyOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
-    }
 }
